he/wp-content/themes/wombat/style.css
/* ... */
div.sidebox li a:hover{color:#EFB;}

/* footer */
div#footer a:link, div#footer a:visited{color:#09F;text-decoration:underline;}
div#footer a:hover{color:#09F;text-decoration:none;}
div#footer div#footblock1 {width:240px;margin:20px 0 0 0;display:block;float:right;background:#d4d4d4;padding:0;}
div#footer div#footblock1 a img{margin:0;padding:0;border-left:1px solid #adadad;}

div#footer div#footblock2 {width:180px;margin:0;display:block;float:right;background:#d4d4d4;text-align:center;border-left:1px solid #adadad;font-weight:bold;text-align:right;}
div#footer div#footblock2 div#follow{display:block;float:right;margin:15px 15px 0 15px;}
div#footer div#footblock2 img#twitter {border:3px solid #d4d4d4;margin:8px 5px 0 0;background:#d4d4d4;float:right;}
div#footer div#footblock2 img#twitter:hover {border:3px solid #999;margin:8px 5px 0 0;background:#999;border-radius:4px;moz-border-radius:4px;webkit-border-radius:4px;}
div#footer div#footblock2 img#fb {border:3px solid #d4d4d4;margin:8px 0 0 0;;background:#d4d4d4;float:right;}
div#footer div#footblock2 img#fb:hover {border:3px solid #999;margin:8px 0 0 0;background:#999;border-radius:4px;moz-border-radius:4px;webkit-border-radius:4px;}

div#footer div#footblock3 {width:200px;height:37px;margin:0;display:block;float:right;background:#d4d4d4;text-align:center;border-left:1px solid #adadad;font-weight:bold;}


div#footer div#footblock4 {width:100px;padding:13px 30px 0 30px;margin:0;display:block;float:right;font-weight:bold;text-align:right;}
div#footer div#footblock4 a {position:relative;top:-15px;right:40px;width:85px;height:25px;display:block;background:url(images/logo-bg.jpg); text-decoration:none}
div#footer div#footblock4 a:hover {background-position: -85px 0px;}
div#footer div#footblock4 a span.logotext { position: absolute; left: -5000px; text-decoration:none}

div#backtotop {position:relative;top:2px;right:0px;}

/* topmenu */
div#topmenu{position:absolute;top:25px;left:0px;height:34px;}
div#topmenu li.current_page_item a {color:#000;}

#topmenu ul {
	float: left;
	list-style: none;
	margin: 0px;
	padding: 0px;
	}
	
#topmenu li {float:right;display:block;font-family: Arial; font-stretch: condensed;text-transform:uppercase;background:none;padding:15px 3px 0 3px; color:#fff;text-decoration:none; font-weight:900;height:34px;}
	
#topmenu li a, #topmenu li a:link, #topmenu li a:visited, #topmenu li a:active {
	color: #fff;
	display: block;
	margin: 0px;
	padding:0;
	font-size:13px;
	font-family: Arial;
	font-stretch: condensed;
	font-weight:900;
	text-decoration:none;
	}

#topmenu li a:hover {
	color: #000;
	display: block;
	margin: 0px;
	padding:0;
	font-size:13px;
	font-family: Arial;
	font-stretch: condensed;
	font-weight:900;
	text-decoration:none;
	}
	
#topmenu li li a, #topmenu li li a:link, #topmenu li li a:visited, #topmenu li li a:active {
	width: 150px;
	height:auto;
	font-size:14px;
	color: #666;
	font-family: Arial,tahoma, century gothic,Georgia,  sans-serif;
	font-weight: bold;
	text-transform:none;
	border-top:1px dashed #666;
	margin:0 0 -20px 0;
	padding:8px 7px 6px 7px;
	background:#FFF;
	}
	
#topmenu li li a:hover {
	color: #000;
	padding:8px 7px 6px 7px;
	font-size:14px;
	background: #FFF;
	}

#topmenu li ul {
	z-index: 9999;
	position: absolute;
	left: -999em;
	height: auto;
	width: 160px;
	margin: -5px 0 0 -15px;
	padding: 0px;
	}

#topmenu li li { margin:0 0 -20px 0;
	}

#topmenu li ul a { 
	width: 140px;
	}

#topmenu li ul a:hover, #topmenu li ul a:active { 
	}

#topmenu li ul ul {
	margin: -31px 0 0 170px;
	}

#topmenu li:hover ul ul, #topmenu li:hover ul ul ul, 
#topmenu li.sfhover ul ul, #topmenu li.sfhover ul ul ul {
	left: -999em;
	}

#topmenu li:hover ul, #topmenu li li:hover ul, 
#topmenu li li li:hover ul, #topmenu li.sfhover ul, 
#topmenu li li.sfhover ul, #topmenu li li li.sfhover ul {
	left: auto;
	}

#topmenu li:hover, #topmenu li.sfhover { 
	position: static;
	}
#footer {height: 100%; min-height: 100px}

input.wpcf7-form        {padding: 0 10px 0 20px}
input.wpcf7-text	{height:30px;width:248px;border:1px solid #999; padding: 0 10px 0 10px;-webkit-box-shadow: 0px 0px 4px #aaa; -moz-box-shadow: 0px 0px 4px #aaa; box-shadow: 0px 0px 4px #aaa;}
.wpcf7 textarea         {border:1px solid #999; padding: 10px;-webkit-box-shadow: 0px 0px 4px #aaa; -moz-box-shadow: 0px 0px 4px #aaa; box-shadow: 0px 0px 4px #aaa;width:248px}
input.wpcf7-text:hover, textarea.wpcf7:hover { background: #eee; }
input.wpcf7-submit	{height:30px;width:150px;color:#FFF;background:#09F;border:1px solid #09F;border-radius:4px;moz-border-radius:4px;webkit-border-radius:4px;margin-left:0px;}
input.wpcf7-submit:hover  {background:#ff9933;border:1px solid  #e6e4e2}

